avancée presque terminée du td 4 (quelques détails à peaufiner)